# FEAStudio

./: .gitignore  CMakeLists.txt  CMakeSettings.json  FEMStudio.pro  README.md
EngieStudio/: Color.cpp  Color.h  CurveMdiSubWin.cpp  CurveMdiSubWin.h  EngieStudio.pro  GraphicMdiSubWin.cpp  GraphicMdiSubWin.h  Icon.qrc  MainWindow.cpp  MainWindow.h  MessageDockWidget.cpp  MessageDockWidget.h  PentagonalPyramid.cpp  PentagonalPyramid.h  PropertyDockWidget.cpp  PropertyDockWidget.h  TableMdiSubWin.cpp  TableMdiSubWin.h  TreeDockWidget.cpp  TreeDockWidget.h  Vector3D.cpp  Vector3D.h  Vertex.cpp  Vertex.h  actions.qrc  appicon.rc  main.cpp  shader.qrc
EngieStudio/Files/: AnalysisFile.cpp  BDFAnalysis.cpp  BDFAnalysis.h  CDBAnalysis.cpp  CDBAnalysis.h  DealWithXML.cpp  DealWithXML.h  STLAnalysis.cpp  STLAnalysis.h  TxtAnalysis.cpp  TxtAnalysis.h  UFFAnalysis.cpp  UFFAnalysis.h  UNVAnalysis.cpp  UNVAnalysis.h  files.pri
EngieStudio/Geometry/: Arrow.cpp  Arrow.h  Hexahedron.cpp  Hexahedron.h  Line.cpp  Line.h  Object.cpp  Object.h  Point.cpp  Point.h  Pyramid.cpp  Pyramid.h  Quadrangle.cpp  Quadrangle.h  Tetrahedron.cpp  Tetrahedron.h  Triangle.cpp  Triangle.h  TriangularPrism.cpp  TriangularPrism.h  geomertryelement.pri
EngieStudio/MsgHandle/: MsgHandleerWapper.cpp  MsgHandleerWapper.h  MsgHandler.pri
EngieStudio/OpenGLWidget/: ArcBall.cpp  ArcBall.h  GLWidget.cpp  GLWidget.h  OpenGLWidget.pri  Shader.cpp  Shader.h  shader.qrc  vmath.h
EngieStudio/OpenGLWidget/Shader/: BackgroundFrag.frag  BackgroundVertex.vsh  FacesFragShader.frag  FacesVertexShader.vsh  LinesFragShader.frag  LinesVertexShader.vsh  VertexsFragShader.frag  VertexsVertexShader.vsh  build_lists.frag  build_lists.vert  lighting.vsh  multilighting.frag  multilighting.vsh  text.vsh
EngieStudio/standartTools/: ColorGenerator.cpp  ColorGenerator.h  standartTools.pri
src/: CMakeLists.txt  Color.cpp  Color.h  CurveMdiSubWin.cpp  CurveMdiSubWin.h  GraphicMdiSubWin.cpp  GraphicMdiSubWin.h  MainWindow.cpp  MainWindow.h  MessageDockWidget.cpp  MessageDockWidget.h  PentagonalPyramid.cpp  PentagonalPyramid.h  PropertyDockWidget.cpp  PropertyDockWidget.h  TableMdiSubWin.cpp  TableMdiSubWin.h  TreeDockWidget.cpp  TreeDockWidget.h  Vector3D.cpp  Vector3D.h  Vertex.cpp  Vertex.h  appicon.aps  appicon.rc  mainresource.qrc
src/File/: CMakeLists.txt  STLFile.h
src/Files/: STLFile.cpp
src/OpenGLWidget/: ArcBall.cpp  ArcBall.h  CMakeLists.txt  GLWidget.cpp  GLWidget.h  OpenGLWidget.cpp  OpenGLWidget.h  Shader.cpp  Shader.h  shader.qrc  vmath.h
src/OpenGLWidget/Shader/: BackgroundFrag.frag  BackgroundVertex.vsh  FacesFragShader.frag  FacesVertexShader.vsh  LinesFragShader.frag  LinesVertexShader.vsh  VertexsFragShader.frag  VertexsVertexShader.vsh  build_lists.frag  build_lists.vert  lighting.frag  lighting.vsh  multilighting.frag  multilighting.vsh  resolve_lists.frag  text.vsh
src/fileanalysis/: AnalysisFile.cpp  AnalysisFile.h  BDFAnalysis.cpp  BDFAnalysis.h  CDBAnalysis.cpp  CDBAnalysis.h  CMakeLists.txt  DealWithXML.cpp  DealWithXML.h  STLAnalysis.cpp  TxtAnalysis.cpp  TxtAnalysis.h  UFFAnalysis.cpp  UFFAnalysis.h  UNVAnalysis.cpp  UNVAnalysis.h
src/geometry/: Arrow.cpp  Arrow.h  CMakeLists.txt  Hexahedron.cpp  Hexahedron.h  Line.cpp  Line.h  Object.cpp  Object.h  Point.cpp  Point.h  Pyramid.cpp  Pyramid.h  Quadrangle.cpp  Quadrangle.h  Tetrahedron.cpp  Tetrahedron.h  Triangle.cpp  Triangle.h  TriangularPrism.cpp  TriangularPrism.h
src/msghandle/: CMakeLists.txt  MsgHandleerWapper.cpp  MsgHandleerWapper.h
src/standarttools/: CMakeLists.txt  ColorGenerator.cpp  ColorGenerator.h
